fix: Connectors cover non-visible elements

--- a/djangocms_automation/static/djangocms_automations/css/charts.css
+++ b/djangocms_automation/static/djangocms_automations/css/charts.css
@@ -147,7 +147,7 @@ body {
                 background: var(--dca-white);
             }
         }
-        .automation-branch-empty {
+        .automation-branch.empty {
             flex: 0.1;
         }
     }
